ignition + core fix

--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,12 @@
     "dragonmantank/cron-expression": "^3.3",
     "laravel/serializable-closure": "v2.0.0",
     "nesbot/carbon": "^3.8",
-    "symfony/console": "^4.3",
+    "symfony/console": "^5",
     "symfony/lock": "^5.4.15",
     "mockery/mockery": "^1.6",
-    "phpunit/phpunit": "^11"
+    "phpunit/phpunit": "^11",
+    "spatie/ignition": "^1.15",
+    "monolog/monolog": "^3.9.0"
   },
   "autoload" : {
     "psr-4" : {
